--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
 	/*padding-top: 50px; */
-	padding-bottom:0px;
+	padding-bottom:0;
 	min-height:500px;
 	background-color:#18232b;
 }
@@ -109,8 +109,7 @@ body {
 	font-family:'Open Sans',sans-serif;
 	font-weight:300;
 	font-size: 29px;
-	padding: 0 10px;
-	padding-top: 330px;
+	padding: 330px 10px 0;
 	max-width: 900px;
 	margin: 0 auto;
 	text-align: center;
@@ -182,8 +181,7 @@ body {
 	font-family:'Open Sans',sans-serif;
 	font-weight:300;
 	font-size: 18px;
-	padding: 0;
-	padding-top: 10px;
+	padding: 10px 0 0;
 	text-align: justify;
 }
 
@@ -224,7 +222,7 @@ body {
 @media only screen and (max-width: 568px) {
 	.express-image
 	{
-		padding: 20px 0px;
+		padding: 20px 0;
 	}
 	.express-container 
 	{
@@ -306,7 +304,7 @@ body {
 	/*width: 360px;*/
 	/*background-color: red;*/
 	/*margin: 0 auto;*/
-	padding: 40px 10px 0px 10px;
+	padding: 40px 10px 0 10px;
 
 }
 
@@ -340,9 +338,8 @@ body {
 
 #ansel-photo
 {
-	background-image: url(../images/ansel.jpg);
 	background-size: contain;
-	background-repeat: no-repeat;
+	background: url(../images/ansel.jpg) no-repeat;
 	padding-top: 360px;
 	width: 360px;
 	margin: 0 auto;
@@ -404,9 +401,8 @@ body {
 
 	#ansel-photo
 	{
-		background-image: url(../images/ansel.jpg);
 		background-size: contain;
-		background-repeat: no-repeat;
+		background: url(../images/ansel.jpg) no-repeat;
 		padding-top: 100%;
 		width: 100%;
 		margin: 0 auto;
@@ -420,10 +416,8 @@ body {
 
 
 .new-app-banner-text {
-	background-image: url(../images/app_icon_video.png);
 	background-size: 62px;
-	background-position: left top;
-	background-repeat: no-repeat;
+	background: url(../images/app_icon_video.png) no-repeat left top;
 	/*background-color: red;*/
 	font-family: "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
 	font-size: 22px;
@@ -468,7 +462,7 @@ body {
 
 #apps-footer-photo h3 {
 	color: white;
-	text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.87);
+	text-shadow: 0 0 10px rgba(0, 0, 0, 0.87);
 	/*font-size: 18pt;*/
 }
 
@@ -541,7 +535,7 @@ body {
 	background-color: RGBA(216, 59, 28, 0.85);
 	/*background-color: RGBA(253, 192, 41, 0.85);*/
 	margin-top: 80px;
-	padding: 15px 15px 0px 15px;
+	padding: 15px 15px 0 15px;
 
 }
 
@@ -582,7 +576,7 @@ body {
 }
 
 #precision.made-container p {
-	padding-top: 0px;
+	padding-top: 0;
 }
 
 #made-title {
@@ -590,13 +584,12 @@ body {
 }
 
 .made-container {
-	padding-top: 0px;
+	padding-top: 0;
 	max-width: 1000px;
 }
 
 .made-container p {
-	padding: 30px;
-	padding-top: 80px;
+	padding: 80px 30px 30px;
 	font-size: 18px;
 }
 
@@ -619,11 +612,11 @@ body {
 	width: 350px;
 	margin-left: 90px;
 	/*background-color: red;*/
-	
+
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: contain;
-	padding: 184px 63px 0px 62px;
+	padding: 184px 63px 0 62px;
 }
 
 .iphone-photo {
@@ -665,7 +658,7 @@ body {
 	width: 80%;
 	max-width: 850px;
 	margin: 0 auto;
-	padding: 0px 0 100px 0;
+	padding: 0 0 100px 0;
 }
 
 #tos-text h3 {
@@ -674,7 +667,7 @@ body {
 }
 
 #tos-text h4 {
-	padding: 20px 0 0px 0;
+	padding: 20px 0 0 0;
 }
 
 #tos-text a {
@@ -715,14 +708,13 @@ body {
 	/*width: 80%;*/
 	/*background: blue; */
 	/*height: 570px;*/
-	margin: 0 auto;
-	margin-top: 132px;
-	padding-left: 0px;
+	margin: 132px auto 0;
+	padding-left: 0;
 
 }
 
 .app-section-right-container {
-	padding: 0px;
+	padding: 0;
 	/*padding-top: 90px;*/
 
 }
@@ -742,7 +734,7 @@ body {
 
 .app-section-title {
 
-	padding-bottom: 0px;
+	padding-bottom: 0;
 }
 
 .app-section-text p {
@@ -761,27 +753,6 @@ body {
 	background-size: cover;
 	background-position: center center;
 }
-
-#slide-1 {
-	background-image: url(../images/lifestyle_1.jpg);
-}
-
-#slide-2 {
-	background-image: url(../images/lifestyle_2.jpg);
-}
-
-#slide-3 {
-	background-image: url(../images/lifestyle_3.jpg);
-}
-
-#slide-4 {
-	background-image: url(../images/lifestyle_4.jpg);
-}
-
-#slide-5 {
-	background-image: url(../images/lifestyle_5.jpg);
-}
-
 
 #carousel-lifestyle {
 	padding-top: 100px;
@@ -825,18 +796,18 @@ body {
 
 #tech-specs-table .row {
 	padding: 10px 0;
-	margin-right: 0px;
-	margin-left: 0px;
+	margin-right: 0;
+	margin-left: 0;
 }
 
 #shop-title .row {
-	margin-right: 0px;
-	margin-left: 0px;
+	margin-right: 0;
+	margin-left: 0;
 }
 
 #lumu-process .row {
-	margin-right: 0px;
-	margin-left: 0px;
+	margin-right: 0;
+	margin-left: 0;
 }
 
 #lumu-effect {
@@ -879,7 +850,7 @@ body {
 
 #story-title {
 	padding-top: 160px;
-	padding-bottom: 0px;
+	padding-bottom: 0;
 	width: 70%;
 	max-width: 850px;
 	margin: 0 auto;
@@ -940,19 +911,15 @@ body {
 
 #dev-header-foto {
 
-	background: #1C1C1C url("../images/sdk_photo_wide.jpg") no-repeat;
 	background-size: cover;
 	height: 800px;
-	background-position: center top;
+	background: #1C1C1C url("../images/sdk_photo_wide.jpg") no-repeat center top;
 }
 
 .dev-button {
 	padding: 20px 50px;
-	background-color: #3097DE;
-	background-image: url(../images/button_arrow.png);
 	background-size: 25px;
-	background-position: center right;
-	background-repeat: no-repeat;
+	background: #3097DE url(../images/button_arrow.png) no-repeat center right;
 	border-width: 0;
 }
 
@@ -990,7 +957,7 @@ body {
 
 #shop-top-left {
 	/*background-color: blue;*/
-	padding: 15px 0 0 0px;
+	padding: 15px 0 0 0;
 }
 
 #shop-top-right {
@@ -1011,9 +978,8 @@ body {
 }
 
 .play-video {
-	background-image: url(../images/play-video-icon.png);
 	background-size: 60px 60px;
-	background-repeat:  no-repeat;
+	background: url(../images/play-video-icon.png) no-repeat;
 	height: 60px;
 	font-size: 18px;
 	font-family: 'Open Sans',sans-serif;
@@ -1028,29 +994,25 @@ body {
 
 
 .panel-body {
-	font-family: 'Open Sans' !important;
+	font-family: 'Open Sans', serif !important;
 	font-weight: 300;
 }
 
 .panel-group .panel {
-	border-radius: 0px;
+	border-radius: 0;
 	box-shadow: none;
 	-webkit-box-shadow: none;
 	border: none;
 }
 
 .faq-panel .collapsed .panel-heading {
-	background-image: url(../images/faq_arrow_down.png);
 	background-size: 26px;
-	background-position: right center;
-	background-repeat: no-repeat;
+	background: url(../images/faq_arrow_down.png) no-repeat right center;
 }
 
 .panel-group .panel-heading {
-	background-image: url(../images/faq_arrow_up.png);
 	background-size: 26px;
-	background-position: right center;
-	background-repeat: no-repeat;
+	background: url(../images/faq_arrow_up.png) no-repeat right center;
 }
 
 #holiday-overlay
@@ -1097,12 +1059,12 @@ body {
 	/*background-color: red;*/
 	/*width: 500px;*/
 	text-align: left;
-	/*text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.99);*/
+	/*text-shadow: 0 0 10px rgba(0, 0, 0, 0.99);*/
 
 }
 
 #header-foto-text h1 {
-	font-family: 'Open Sans' !important;
+	font-family: 'Open Sans', serif !important;
 	font-style: normal;
 	font-weight: 600;
 	font-size: 45px;
@@ -1111,7 +1073,7 @@ body {
 
 
 #header-foto-text h3 {
-	font-family: 'Open Sans' !important;
+	font-family: 'Open Sans', serif !important;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 45px;
@@ -1142,7 +1104,7 @@ body {
 #new-app-header-text
 {
 	color: white;
-	text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.99);
+	text-shadow: 0 0 10px rgba(0, 0, 0, 0.99);
 	/*background-color: red;*/
 	width: 50%;
 	margin: 0 50%;
@@ -1186,7 +1148,7 @@ background: url(../images/foto1.jpg);
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.87);
+	text-shadow: 0 0 5px rgba(0, 0, 0, 0.87);
 }
 
 .btn-lumu {
@@ -1210,55 +1172,6 @@ background: url(../images/foto1.jpg);
 	margin: 0 auto;
 }
 
-
-/*CAMERA FLIPPING*/
-
-
-#flip-camera {
-	/*margin-top: -150px;*/
-	/*margin-left: 200px;*/
-	float: left;
-	position: relative;
-	opacity: 0;
-}
-
-.flip-container {
-  -webkit-perspective: 1000;
-  -moz-perspective: 1000;
-  -o-perspective: 1000;
-  perspective: 1000;
-
-	/*border: 1px solid #ccc;*/
-}
-
-	  
-  .flip-container.hover .flipper, .flip-container.flip .flipper {
-		-webkit-transform: rotateY(180deg);
-		-moz-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-		transform: rotateY(180deg);
-	}
-
-.flip-container, .front, .back {
-	width: 200px;
-	height: 200px;
-}
-
-.flipper {
-	-webkit-transition: 0.6s;
-	-webkit-transform-style: preserve-3d;
-
-	-moz-transition: 0.6s;
-	-moz-transform-style: preserve-3d;
-  
-  -o-transition: 0.6s;
-	-o-transform-style: preserve-3d;
-
-	transition: 0.6s;
-	transform-style: preserve-3d;
-
-	position: relative;
-}
 
 .front, .back {
 	-webkit-backface-visibility: hidden;
@@ -1512,31 +1425,6 @@ background-size:contain;
 	margin: 20px;
 }
 
-/* CF photo */
-#cf-photo {
-	background-image:url(../images/effect_top.jpg);
-	width:100%;
-	height:548px;
-	max-width:985px;
-}
-
-/* Fader */
-#cf-center {
-	max-width:985px;
-	margin:0 auto;
-}
-
-#cf {
-	position:relative;
-	height:548px;
-}
-
-.cf_img {
-	height:100%;
-	width:100%;
-	position:absolute;
-}
-
 #effect-to-text {
 	opacity:0;
 }
@@ -1546,18 +1434,6 @@ background-size:contain;
 	-moz-transition:opacity .5s ease-in-out;
 	-o-transition:opacity .5s ease-in-out;
 	transition:opacity .5s ease-in-out;
-}
-
-.cf_top {
-	background:url(../images/effect_top_3.jpg);
-	background-size:cover;
-	background-position:left center;
-}
-
-.cf_bottom {
-	background:url(../images/effect_bottom_3.jpg);
-	background-size:cover;
-	background-position:left center;
 }
 
 /* Rotating images */
@@ -1571,9 +1447,9 @@ ol {
 	list-style-type: decimal;
 	-webkit-margin-before: 0em;
 	-webkit-margin-after: 0em;
-	-webkit-margin-start: 0px;
-	-webkit-margin-end: 0px;
-	-webkit-padding-start: 0px;
+	-webkit-margin-start: 0;
+	-webkit-margin-end: 0;
+	-webkit-padding-start: 0;
 	padding: 0;
 }
 
@@ -1660,8 +1536,7 @@ footer {
 }
 
 #footer-links {
-	padding: 20px;
-	padding-bottom: 30px;
+	padding: 20px 20px 30px;
 	max-width: 640px;
 	font-size: 12px;
 	margin: 0 auto;
@@ -1695,7 +1570,7 @@ footer {
 	font-size: 28px;
 	color: rgba(255,255,255,0.8);
 	background-color: rgba(0,0,0,0.5);
-	text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.87);
+	text-shadow: 0 0 10px rgba(0, 0, 0, 0.87);
 }
 
 #footer-copyright {
@@ -1716,7 +1591,7 @@ footer p {
 #subscribe {
 	width: 615px;
 	height: auto;
-	margin: 0px auto 10px auto;
+	margin: 0 auto 10px auto;
 
 }
 
@@ -1724,7 +1599,7 @@ footer p {
 	float: left;
 	/* 	background: url("../images/e.png") no-repeat; */
 	background-size: contain;
-	padding-left: 0px;
+	padding-left: 0;
 	margin-top: 8px;
 	font-size: 20px;
 	color: #e6e7e8;
@@ -1749,9 +1624,9 @@ input{
 	color: #404041; 
 	width: 80px; 
 	height: 30px;
-	text-align: cent	er; 
+	text-align: center; 
 	text-decoration: none; 
-	margin: 6px 0px 10px 0px; 
+	margin: 6px 0 10px 0; 
 	cursor: pointer; 
 	-webkit-appearance: none;
 }
@@ -1762,7 +1637,7 @@ input{
 
 
 /* SOCIAL ICONS - GENERAL */
-.social { list-style:none; margin:0px auto; width:250px;}
+.social { list-style:none; margin:0 auto; width:250px;}
 .social li { display:inline; float:left; background-repeat:no-repeat; background-size: contain; }
 .social li a { display:block; width:48px; height:48px; margin-right:15px; position:relative; text-decoration:none;}
 
@@ -1771,9 +1646,9 @@ li.twitter { background-image:url("../images/twitter.png"); }
 li.tumblr { background-image:url("../images/tumblr.png"); }
 li.instagram { background-image:url("../images/instagram.png"); }
 
-/*.country { list-style:none; margin:0px auto; width:250px; padding-top: 10px;}
-.country li { display:inline; float:left; background-repeat:no-repeat; background-size: 50%; background-position: center top;  padding-top: 0px; padding-bottom: 0px; }
-.country li a { display:block; width:90px; height:78px; margin-right:0px; position:relative; text-decoration:none; padding-top: 48px; color: #AEAEAE;}
+/*.country { list-style:none; margin:0 auto; width:250px; padding-top: 10px;}
+.country li { display:inline; float:left; background-repeat:no-repeat; background-size: 50%; background-position: center top;  padding-top: 0; padding-bottom: 0; }
+.country li a { display:block; width:90px; height:78px; margin-right:0; position:relative; text-decoration:none; padding-top: 48px; color: #AEAEAE;}
 .country li a:hover {color: white;}
 li.country-us { background-image:url("../images/shop-us-icon.png"); }
 li.country-int { background-image:url("../images/shop-int-icon.png"); }*/
@@ -1872,7 +1747,7 @@ a:hover {
 }
 
 .shop-plus-sign {
-	font-family:"HelveticaNeue";
+	font-family: "HelveticaNeue", serif;
 	padding: 80px 0;
 	font-size: 40px;
 	/*background-color: red;*/
@@ -1926,7 +1801,7 @@ a:hover {
 	#ansel-text-container
 {
 	
-	padding-top: 0px;
+	padding-top: 0;
 	text-align: center;
 	padding-bottom: 20px;
 	max-width: 400px;
@@ -1968,8 +1843,7 @@ a:hover {
 
 	#carousel-lifestyle {
 		width: 100%;
-		padding: 0;
-		padding-top: 40px;
+		padding: 40px 0 0;
 	}
 
 	#dev-header-foto {
@@ -1992,7 +1866,7 @@ a:hover {
 	#tech-specs-container {
 		/*background-color: blue;*/
 		padding-top: 10px;
-		padding-bottom: 0px;
+		padding-bottom: 0;
 		width: 90%;
 
 	}
@@ -2193,7 +2067,7 @@ a:hover {
 	}
 
 	#new-app-header-text {
-		text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.87);
+		text-shadow: 0 0 10px rgba(0, 0, 0, 0.87);
 	}
 
 
@@ -2241,8 +2115,6 @@ a:hover {
 	}
 
 	#made-title {
-		padding-top: 40px;
-		padding-bottom: 60px;
 		width: 90%;
 		margin: 0 auto;
 		padding: 15px;
@@ -2251,7 +2123,7 @@ a:hover {
 	.play-video {
 		width: 100%;
 		max-width: 280px;
-		margin-left: 0px;
+		margin-left: 0;
 		margin-top: 20px;
 		/*padding-left: 0;*/
 	}
@@ -2269,7 +2141,7 @@ a:hover {
 	}
 	.made-section-left {
 		padding-left: 15px;
-		padding-top: 0px;
+		padding-top: 0;
 	}
 
 	.made-section-right {
@@ -2313,11 +2185,10 @@ a:hover {
 
 	.app-section-right {
 		width: 100%;
-		background: #E6E6E6; 
-		margin: 0 auto;
+		background: #E6E6E6;
 		padding: 50px 20px 20px 20px;
 		height: 100%;
-		margin-top: -80px;
+		margin: -80px auto 0;
 		position: relative;
 		/*z-index: -1;*/
 	}
@@ -2337,7 +2208,7 @@ a:hover {
 		width: 250px;
 		margin: 0 auto;
 		/*background-color: red;*/
-		padding: 206px 19px 0px 18px;
+		padding: 206px 19px 0 18px;
 
 	}
 
@@ -2346,7 +2217,7 @@ a:hover {
 	}
 
 	.app-section-right-container {
-		padding: 0px;
+		padding: 0;
 	}
 
 
@@ -2377,8 +2248,8 @@ a:hover {
 	}
 
 	#shop-select-color {
-		margin-bottom: 0px;
-		padding-top: 0px;
+		margin-bottom: 0;
+		padding-top: 0;
 	}
 	.three-steps-container
 	{
@@ -2428,8 +2299,8 @@ a:hover {
 	#subscribe_text {
 		font-size: 14px;
 		float: none;
-		padding-left: 0px;
-		margin: 0px auto 0px auto;
+		padding-left: 0;
+		margin: 0 auto 0 auto;
 		width: 250px;
 		text-align: center;
 	}
