cropped header foto

--- a/css/style.css
+++ b/css/style.css
@@ -1011,7 +1011,7 @@ body {
 	}
 
 .header-foto {
-	background: #1C1C1C url("../img/sleeping_girl.jpg") no-repeat center top;
+	background: #1C1C1C url("../img/sleeping_girl1.jpg") no-repeat center top;
 	/*-webkit-background-size: auto 700px;
 	-moz-background-size: auto 700px;*/
 	background-size: cover;
