--- a/css/style.css
+++ b/css/style.css
@@ -1122,15 +1122,15 @@ background: url(../images/foto1.jpg);
 }
 
 .btn-illuminight {
-	background-color: #293a47;
+	background-color: #242d49;
     color: white;
-    border-color: #293a47;
+    border-color: #242d49;
 	/*font-size: 16pt;*/
 }
 
 .btn-illuminight:hover {
-    background-color: #1d2e3b ;
-    border-color: #1d2e3b;
+    background-color: #1a2135;
+    border-color: #1a2135;
 }
 
 
@@ -1336,7 +1336,7 @@ background-size:contain;
 
 #three-steps
 {
-	padding-top: 60px;
+	padding-top: 70px;
 }
 
 .three-steps-step
@@ -1517,7 +1517,7 @@ footer {
 	padding: 60px 10px;
 	font-size: 28px;
 	color: rgba(255,255,255,0.8);
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0,0,0,0.75);
 	text-shadow: 0 0 10px rgba(0, 0, 0, 0.87);
 }
 
