--- a/css/style.css
+++ b/css/style.css
@@ -1018,6 +1018,14 @@ body {
 	height: 850px;
 }
 
+.header-foto-instructions {
+    background: #1C1C1C url("../img/storytelling.jpg") no-repeat center top;
+    /*-webkit-background-size: auto 700px;
+    -moz-background-size: auto 700px;*/
+    background-size: cover;
+    height: 850px;
+}
+
 #header-foto-text {
 	padding-top: 505px;
 	/*padding-right: 50px;*/
@@ -1437,55 +1445,67 @@ ol {
 }
 
 #frame-list li:nth-child(1) {
-	background:url(../images/rotating_natural/3.jpg) no-repeat 70% 50%;
+	background:url(../img/disc1.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(2) {
-	background:url(../images/rotating_natural/4.jpg) no-repeat 70% 50%;
+	background:url(../img/disc2.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(3) {
-	background:url(../images/rotating_natural/5.jpg) no-repeat 70% 50%;
+	background:url(../img/disc3.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(4) {
-	background:url(../images/rotating_natural/6.jpg) no-repeat 70% 50%;
+	background:url(../img/disc4.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(5) {
-	background:url(../images/rotating_natural/7.jpg) no-repeat 70% 50%;
+	background:url(../img/disc5.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(6) {
-	background:url(../images/rotating_natural/8.jpg) no-repeat 70% 50%;
+	background:url(../img/disc6.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(7) {
-	background:url(../images/rotating_natural/9.jpg) no-repeat 70% 50%;
+	background:url(../img/disc7.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(8) {
-	background:url(../images/rotating_natural/10.jpg) no-repeat 70% 50%;
+	background:url(../img/disc8.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(9) {
-	background:url(../images/rotating_natural/11.jpg) no-repeat 70% 50%;
+	background:url(../img/disc9.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(10) {
-	background:url(../images/rotating_natural/12.jpg) no-repeat 70% 50%;
+	background:url(../img/disc10.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(11) {
-	background:url(../images/rotating_natural/13.jpg) no-repeat 70% 50%;
+	background:url(../img/disc11.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(12) {
-	background:url(../images/rotating_natural/14.jpg) no-repeat 70% 50%;
+	background:url(../img/disc12.png) no-repeat 70% 50%;
 }
 
 #frame-list li:nth-child(13) {
-	background:url(../images/rotating_natural/15.jpg) no-repeat 70% 50%;
+	background:url(../img/disc13.png) no-repeat 70% 50%;
+}
+
+#frame-list li:nth-child(14) {
+    background:url(../img/disc14.png) no-repeat 70% 50%;
+}
+
+#frame-list li:nth-child(15) {
+    background:url(../img/disc15.png) no-repeat 70% 50%;
+}
+
+#frame-list li:nth-child(16) {
+    background:url(../img/disc_end.png) no-repeat 70% 50%;
 }
 
 #frame-list li.active {
