--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 #news-section {
 	background-color: #1f262c;
 	color: white;
-	height: 200px;
+	height: 400px;
 }
 
 #news-section a {
@@ -28,25 +28,28 @@ body {
 }
 
 #news-section .col-sm-4 {	
-	height: 200px;
+	height: 300px;
 	background-position: center;
 }
 
 #news-ansel {
-	background-image: url(../images/news-ansel.jpg);
-	background-size: cover;
+	background-image: url(../img/closed_box.jpg);
+	background-size: 450px;
 }
 
 #news-apps {
-	background-image: url(../images/news-apps.jpg);
-	background-size: cover;
+	background-image: url(../img/disc.jpg);
+	background-size: 450px;
 }
 
 #news-blog {
-	background-image: url(../images/news-blog.jpg);
-	background-size: cover;
+	background-image: url(../img/open_box.jpg);
+	background-size: 450px;
 }
 
+#news-gears {
+    background-image: url(../img/toy_gears.jpg);
+    background-size: 450px;
 }
 
 .new-app-banner-container {
@@ -1027,7 +1030,7 @@ body {
 }
 
 #header-foto-text {
-	padding-top: 505px;
+	padding-top: 595px;
 	/*padding-right: 50px;*/
 	color: black;
 	font-size:45px;
@@ -1037,6 +1040,33 @@ body {
 	/*background-color: red;*/
 	/*width: 500px;*/
 	text-align: left;
+	/*text-shadow: 0 0 10px rgba(0, 0, 0, 0.99);*/
+
+}
+
+#news-section {
+    background-color: rgb(214, 214, 214);
+    box-sizing: border-box;
+    color: rgb(255, 255, 255);
+    display: block;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 10px;
+    height: 300px;
+    line-height: 20px;
+    width: auto;
+}
+
+#product-foto-text {
+	padding-top: 0;
+	/*padding-right: 50px;*/
+	color: black;
+	font-size:10px;
+	/*float: right;
+	clear: both;*/
+	font-family:"HelveticaNeue",Helvetica,sans-serif;
+	/*background-color: red;*/
+	/*width: 500px;*/
+	text-align: center;
 	/*text-shadow: 0 0 10px rgba(0, 0, 0, 0.99);*/
 
 }
@@ -1059,7 +1089,7 @@ body {
 
 #discover h3 {
 	font-size: 32px;
-	padding-top: 100px;
+	padding-top: 10px;
 	margin: 0;
 }
 
