--- a/css/style.css
+++ b/css/style.css
@@ -1515,69 +1515,6 @@ ol {
 	display:none;
 }
 
-#frame-list li:nth-child(1) {
-	background:url(../img/disc1.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(2) {
-	background:url(../img/disc2.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(3) {
-	background:url(../img/disc3.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(4) {
-	background:url(../img/disc4.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(5) {
-	background:url(../img/disc5.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(6) {
-	background:url(../img/disc6.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(7) {
-	background:url(../img/disc7.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(8) {
-	background:url(../img/disc8.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(9) {
-	background:url(../img/disc9.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(10) {
-	background:url(../img/disc10.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(11) {
-	background:url(../img/disc11.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(12) {
-	background:url(../img/disc12.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(13) {
-	background:url(../img/disc13.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(14) {
-    background:url(../img/disc14.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(15) {
-    background:url(../img/disc15.png) no-repeat 70% 50%;
-}
-
-#frame-list li:nth-child(16) {
-    background:url(../img/disc_end.png) no-repeat 70% 50%;
-}
 
 #frame-list li.active {
 	background-position:50%;
@@ -1591,13 +1528,12 @@ ol {
 /* Bootstrap changes. */
 footer {
 	text-align: center;
-	padding-top: 6.5px;
+	padding-top: 6px;
 	height:30px;
 	background-color: black;
 	color:white;
 }
 
-}
 
 #footer-links a:hover {
 	color: white;
@@ -1997,7 +1933,7 @@ a:hover {
 	
 	footer {
 		height:30px;
-        padding-top: 6.5px;
+        padding-top: 6px;
 	}
 
 	h2 {
@@ -2198,8 +2134,12 @@ a:hover {
 		padding: 40px 0;
 	}
 
-	#tech-specs-table .text-right {
+	#tech-specs-table .text-left {
 		text-align: left;
+	}
+
+	#tech-specs-table .text-right {
+		text-align: right;
 	}
 
 	#shop-title {
