--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body {
 	background-color:#18232b;
 }
 
+body#physics {
+    background-color: white;
+}
 
 @font-face {
 	font-family:"HelveticaNeue";
@@ -444,6 +447,25 @@ body {
 	font-size: 18px;
 	max-width: 900px;
 	margin: 0 auto;
+}
+
+.physics-text {
+    padding-bottom: 100px;
+    padding-top: 100px;
+    font-size: 18px;
+    max-width: 900px;
+    margin: 0 auto;
+    color: black;
+    background-color: white;
+}
+
+.text-left{
+    /*padding-bottom: 100px;*/
+    font-size: 18px;
+    max-width: 900px;
+    margin: 0 auto;
+    text-align: left;
+    color: black;
 }
 
 .info-text {
